--- a/.github/workflows/pdoc-publish.yml
+++ b/.github/workflows/pdoc-publish.yml
@@ -25,10 +25,19 @@ jobs:
       - name: Install pdoc
         run: pip install pdoc
 
-      - name: Generate API docs
+      - name: Generate API docs for all modules recursively
         run: |
           mkdir -p docs-out
-          pdoc -o docs-out .
+          # Find all .py files, excluding hidden dirs/files, make them module names
+          MODULES=$(find . -type f -name "*.py" ! -path "*/.*/*" ! -name ".*" | \
+            sed 's|^\./||' | sed 's|/|.|g' | sed 's|\.py$||')
+          echo "Detected modules:"
+          echo "$MODULES"
+          if [ -n "$MODULES" ]; then
+            pdoc -o docs-out $MODULES
+          else
+            echo "No Python modules found."
+          fi
 
       - name: Deploy to gh-pages (pdoc directory)
         uses: JamesIves/github-pages-deploy-action@v4
